diseño responsive y avances en la página de contacto

--- a/html/actividades.html
+++ b/html/actividades.html
@@ -73,7 +73,8 @@
                         data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon "></span>
+                        <i class="fas fa-solid fa-bars fa-1x"></i>
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
             </nav>
@@ -88,17 +89,17 @@
                     </h1>
                     <h2 class="fw-semibold text-dark">Un viaje inolvidable a
                         través de la historia y la naturaleza.</h2>
-                    <p class="fs-4 fw-light text-dark"><b>Argentina lo tiene
+                    <p class="fs-5  text-dark"><b>Argentina lo tiene
                             todo.</b>
                         Disfruta de caminatas
-                        desafiantes en El Chaltén, navega por los<b> cristalinos
+                        desafiantes en <b>El Chaltén</b>, navega por los<b> cristalinos
                             lagos patagónicos</b>
                         o explora los <b>coloridos paisajes</b>
-                        de la Quebrada de Humahuaca.
+                        de la <b>Quebrada de Humahuaca.</b>
                         Desde las Salinas Grandes hasta las Cataratas de
                         Jujuy, <b>cada rincón te sorprenderá</b>.
                         Disfruta la tranquilidad, en las
-                        orillas del Nahuel Huapi, rodeado de montañas
+                        orillas del <b>Nahuel Huapi</b>, rodeado de montañas
                         nevadas y bosques milenarios</p>
 
                     <div id="carouselExampleFade"
