--- a/html/informacion.html
+++ b/html/informacion.html
@@ -46,7 +46,6 @@
                             itemscope itemtype="http://schema.org/Organization">
                     </a>
 
-
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul
                             class="navbar-nav me-auto mb-2 mb-lg-0 fs-5 mx-auto  text-center">
@@ -74,13 +73,13 @@
                         data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon "></span>
+                        <i class="fas fa-solid fa-bars fa-1x"></i>
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
             </nav>
 
         </header>
-
         <main>
             <section class="info">
                 <div class="container mt-5 pt-5 justify-content-center">
