--- a/html/destinos.html
+++ b/html/destinos.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="proyecto final">
-        <meta name="keywords" content="pagina web">
-        <meta name="author" content="Irene Imbriani">
-        <!--------google fonts-------->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Praise&family=Seymour+One&display=swap"
-            rel="stylesheet">
-        <!--------------bootstrap------------>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous">
-        <!--------css------>
-        <link rel="stylesheet" type="text/css" href="../css/style.css">
-        <title>destinos</title>
-        <!------favicon
-    <link rel="shortcut icon" href="" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>destinos</title>------->
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="proyecto final">
+    <meta name="keywords" content="pagina web">
+    <meta name="author" content="Irene Imbriani">
+    <!--------google fonts-------->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Praise&family=Seymour+One&display=swap"
+        rel="stylesheet">
+    <!------fontawesome---------->
+    <link rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+        crossorigin="anonymous">
+    <!--------------bootstrap------------>
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous">
+    <!--------css------>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <title>actividades</title>
+    <!------favicon
+<link rel="shortcut icon" href="" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">------->
+</head>
 
     <body>
-
+   
         <header>
 
             <nav class="navbar navbar-expand-lg fixed-top">
@@ -71,14 +75,14 @@
                         data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false"
                         aria-label="Toggle navigation">
+                        <i class="fas fa-solid fa-bars fa-1x"></i>
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
             </nav>
 
         </header>
-
-        <main class="seccion_principal">
+        <main class="principal">
             <section>
                 <div class="container-fluid mt-5">
                     <div class="container">
@@ -109,7 +113,7 @@
                                         class="card-img-top img-fluid h-100"
                                         alt="Imagen_cactus_jujuy">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Jujuy</h5>
 
                                     </div>
                                 </div>
@@ -119,9 +123,9 @@
                                     <img
                                         src="../assets/destinos/destinos-02.png"
                                         class="card-img-top img-fluid h-100"
-                                        alt="...">
+                                        alt="Bariloche">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Bariloche</h5>
 
                                     </div>
                                 </div>
@@ -131,9 +135,9 @@
                                     <img
                                         src="../assets/destinos/destinos-03.png"
                                         class="card-img-top img-fluid h-100"
-                                        alt="...">
+                                        alt="Usuahia">
                                     <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
+                                        <h5 class="card-title">Usuahia</h5>
 
                                     </div>
                                 </div>
@@ -145,7 +149,7 @@
                 </div>
 
             </section>
-            
+
             <section>
                 <div class="container-fluid g-0">
 
@@ -310,82 +314,48 @@
         </section>
 
         <aside>
-            <h3>Reservá con nosotros y aprovechá descuentos exclusivos en
+            <h3>Reservá ahora y aprovechá  de descuentos en
                 alojamientos seleccionados</h3>
             <div class="container">
                 <!-- imagenes de destinos-->
-                <div class="row p-4">
-                    <div class="col-md-4">
-                        <div class="card border-0">
-                            <img src="../assets/destinos/destinos-01.png"
-                                class="card-img-top img-fluid h-100"
-                                alt="Imagen_cactus_jujuy">
-                            <div class="card-body">
-                                <h5 class="card-title">Hotel Quijote</h5>
-
-                            </div>
-                        </div>
+                <div id="carouselExampleCaptions" class="carousel slide">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card border-0">
-                            <img src="../assets/destinos/destinos-02.png"
-                                class="card-img-top img-fluid h-100"
-                                alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-
-                            </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="/assets/alojamientos/hotel_quijote/quijote09.jpg" class="d-block w-100" alt="imagen_hotel">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>First slide label</h5>
+                          <p>Some representative placeholder content for the first slide.</p>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card  border-0">
-                            <img src="../assets/destinos/destinos-03.png"
-                                class="card-img-top img-fluid h-100"
-                                alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-
-                            </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/assets/alojamientos/hotel_quijote/quijote06.jpg" class="d-block w-100" alt="imagen_hotel">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Second slide label</h5>
+                          <p>Some representative placeholder content for the second slide.</p>
                         </div>
-                    </div>
-                </div>
-
-                <div class="row p-4">
-                    <div class="col-md-4">
-
-                        <div class="card border-0">
-                            <img src="../assets/destinos/destinos-01.png"
-                                class="card-img-top img-fluid h-100"
-                                alt="Imagen_cactus_jujuy">
-                            <div class="card-body">
-                                <h5 class="card-title">Hotel Quijote</h5>
-
-                            </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/assets/alojamientos/hotel_quijote/quijote07.jpg" class="d-block w-100" alt="imagen_hotel">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Third slide label</h5>
+                          <p>Some representative placeholder content for the third slide.</p>
                         </div>
+                      </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card border-0">
-                            <img src="../assets/destinos/destinos-02.png"
-                                class="card-img-top img-fluid h-100"
-                                alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card  border-0">
-                            <img src="../assets/destinos/destinos-03.png"
-                                class="card-img-top img-fluid h-100"
-                                alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
             </div>
         </aside>
 
