avances diseño final y detalles responsive

--- a/html/actividades.html
+++ b/html/actividades.html
@@ -137,7 +137,8 @@
                     <div class="row fs-3"><p class="seleccion">Aprovechá nuestra
                             selección de destinos recomendados para
                             vos!</p></div>
-                    <div class="row"> <mark>NAVEGACIONES</mark></div>
+                    <div class="row">
+                         <mark class="fw-bold">NAVEGACIONES</mark></div>
                     <!--cards-->
                     <div class="row py-5">
 
@@ -146,7 +147,7 @@
                                 <h2 class="fs-3">
                                     BARILOCHE
                                 </h2>
-                                <p class="text-center fw-light fs-5">Puerto
+                                <p class="text-center fs-5">Puerto
                                     Blest Puerto Pañuelo</p>
                                 <img
                                     src="../assets/actividades/puerto_blest.png"
@@ -248,7 +249,7 @@
                                 <h2 class="fs-3">
                                     CALAFATE
                                 </h2>
-                                <p class="text-center fw-light fs-5">Todo
+                                <p class="text-center fs-5">Todo
                                     glaciares gourmet</p>
                                 <img
                                     src="../assets/actividades/todo_glaciares.png"
@@ -350,7 +351,7 @@
                                 <h2 class="fs-3">
                                     PUERTO IGUAZÚ
                                 </h2>
-                                <p class="text-center fw-light fs-5">Full
+                                <p class="text-center fs-5">Full
                                     day cataratas Iguazú </p>
                                 <img src="../assets/actividades/cataratas.png"
                                     class="card-img-top"
@@ -448,7 +449,7 @@
 
                     </div>
 
-                    <div class="row"> <mark>SENDERISMO Y RUTAS</mark></div>
+                    <div class="row"> <mark class="fw-bold">SENDERISMO Y RUTAS</mark></div>
 
                     <div class="row py-5">
 
@@ -457,7 +458,7 @@
                                 <h2 class="fs-3">
                                     JUJUY
                                 </h2>
-                                <p class="text-center fw-light fs-5">Quebrada
+                                <p class="text-center fs-5">Quebrada
                                     de Humauaca completa</p>
                                 <img
                                     src="../assets/actividades/quebrada_humahuaca.png"
@@ -560,7 +561,7 @@
                                 <h2 class="fs-3">
                                     JUJUY
                                 </h2>
-                                <p class="text-center fw-light fs-5">Salinas
+                                <p class="text-center fs-5">Salinas
                                     grandes y Purmamarca desde
                                     Salta</p>
                                 <img
@@ -661,7 +662,7 @@
                                 <h2 class="fs-3">
                                     BARILOCHE
                                 </h2>
-                                <p class="text-center fw-light fs-5">San
+                                <p class="text-center fs-5">San
                                     Martín de los Andes y 7 lagos</p>
                                 <img src="../assets/actividades/7lagos.png"
                                     class="card-img-top"
@@ -761,7 +762,7 @@
                                 <h2 class="fs-3">
                                     BARILOCHE
                                 </h2>
-                                <p class="text-center fw-light fs-5">Circuito
+                                <p class="text-center  fs-5">Circuito
                                     Grande</p>
                                 <img
                                     src="../assets/actividades/circuito_grande.png"
@@ -858,7 +859,7 @@
                                 <h2 class="fs-3">
                                     CHALTÉN
                                 </h2>
-                                <p class="text-center fw-light fs-5">Chalten +
+                                <p class="text-center fs-5">Chalten +
                                     Mirador del Glaciar
                                     Huemul</p>
                                 <img src="../assets/actividades/chalten.png"
@@ -956,7 +957,7 @@
                                 <h2 class="fs-3">
                                     CORDOBA
                                 </h2>
-                                <p class="text-center fw-light fs-5">la
+                                <p class="text-center fs-5">la
                                     cumbrecita
                                     y Villa general Belgrano</p>
                                 <img src="../assets/actividades/cumbrecita.png"
