--- a/html/destinos.html
+++ b/html/destinos.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="proyecto final">
-    <meta name="keywords" content="pagina web">
-    <meta name="author" content="Irene Imbriani">
-    <!--------google fonts-------->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Praise&family=Seymour+One&display=swap"
-        rel="stylesheet">
-    <!------fontawesome---------->
-    <link rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
-        crossorigin="anonymous">
-    <!--------------bootstrap------------>
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous">
-    <!--------css------>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <title>actividades</title>
-    <!------favicon
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="description" content="proyecto final">
+        <meta name="keywords" content="pagina web">
+        <meta name="author" content="Irene Imbriani">
+        <!--------google fonts-------->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Praise&family=Seymour+One&display=swap"
+            rel="stylesheet">
+        <!------fontawesome---------->
+        <link rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+            crossorigin="anonymous">
+        <!--------------bootstrap------------>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous">
+        <!--------css------>
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <title>actividades</title>
+        <!------favicon
 <link rel="shortcut icon" href="" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">------->
-</head>
+    </head>
 
     <body>
-   
+
         <header>
 
             <nav class="navbar navbar-expand-lg fixed-top">
@@ -82,12 +81,13 @@
             </nav>
 
         </header>
+
         <main class="principal">
             <section>
                 <div class="container-fluid mt-5">
                     <div class="container">
                         <div class="row">
-                            <div class="col mt-5 pt-5">
+                            <div class="col">
                                 <h1 class="p-4 text-center">Tu próximo
                                     destino te espera</h1>
                             </div>
@@ -103,9 +103,9 @@
                         </div>
                     </div>
 
-                    <div class="container">
+                    <div class="container-fluid px-3">
                         <!-- imagenes de destinos-->
-                        <div class="row p-4">
+                        <div class="row">
                             <div class="col-12 col-lg-4">
                                 <div class="card border-0">
                                     <img
@@ -147,17 +147,15 @@
                     </div>
 
                 </div>
-
             </section>
 
-            <section>
+            <section class="mt-0 pt-0">
                 <div class="container-fluid g-0">
-
                     <!--border-0 para sacar las lineas divisorias de la card-->
-                    <div class="card-title text-center border-0 p-3">
+                    <div class="card-title text-center border-0">
                         <div class="card-header border-0">
                         </div>
-                        <div class=" explora card-body border-0 p-3 lh-1">
+                        <div class="explora card-body border-0 p-3 lh-1">
                             <p class="card-text mb-0 pb-1">#Explora
                                 Argentina</p>
                             <h5 class="card-title fs-2 fw-normal mt-0">Compartí
@@ -307,55 +305,73 @@
                 </div>
 
             </section>
-        </main>
-
-        <section>
-
-        </section>
+        </main>      
 
         <aside>
-            <h3>Reservá ahora y aprovechá  de descuentos en
+            <h3>Reservá ahora y aprovechá de descuentos en
                 alojamientos seleccionados</h3>
             <div class="container">
                 <!-- imagenes de destinos-->
                 <div id="carouselExampleCaptions" class="carousel slide">
                     <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button"
+                            data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button"
+                            data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button"
+                            data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide-to="2" aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="/assets/alojamientos/hotel_quijote/quijote09.jpg" class="d-block w-100" alt="imagen_hotel">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>First slide label</h5>
-                          <p>Some representative placeholder content for the first slide.</p>
+                        <div class="carousel-item active">
+                            <img
+                                src="/assets/alojamientos/hotel_quijote/quijote09.jpg"
+                                class="d-block w-100" alt="imagen_hotel">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>First slide label</h5>
+                                <p>Some representative placeholder content for
+                                    the first slide.</p>
+                            </div>
                         </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/assets/alojamientos/hotel_quijote/quijote06.jpg" class="d-block w-100" alt="imagen_hotel">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Second slide label</h5>
-                          <p>Some representative placeholder content for the second slide.</p>
+                        <div class="carousel-item">
+                            <img
+                                src="/assets/alojamientos/hotel_quijote/quijote06.jpg"
+                                class="d-block w-100" alt="imagen_hotel">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for
+                                    the second slide.</p>
+                            </div>
                         </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/assets/alojamientos/hotel_quijote/quijote07.jpg" class="d-block w-100" alt="imagen_hotel">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Third slide label</h5>
-                          <p>Some representative placeholder content for the third slide.</p>
+                        <div class="carousel-item">
+                            <img
+                                src="/assets/alojamientos/hotel_quijote/quijote07.jpg"
+                                class="d-block w-100" alt="imagen_hotel">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for
+                                    the third slide.</p>
+                            </div>
                         </div>
-                      </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+                    <button class="carousel-control-prev" type="button"
+                        data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon"
+                            aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
+                    <button class="carousel-control-next" type="button"
+                        data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon"
+                            aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
                     </button>
-                  </div>
+                </div>
             </div>
         </aside>
 
