finalizando responsive para entrega, corrección de html y scss

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="proyecto final">
-        <meta name="keywords" content="pagina web">
+        <!--meta description-->
+        <meta name="description" content=" Explora Argentina. Naturaleza, aventura y experiencias únicas. Encuentra los mejores destinos, alojamientos y actividades para tu próximo viaje. Planifica con guías detalladas y precios para todos los presupuestos.">
+        <!---meta tag keywords 5 a 15-->
+        <meta name="keywords" content="vacaciones Argentina, viajes Argentina, trekking,tours, destinos, actividades, naturaleza, excursiones, experiencias," content="pagina web"> 
+        <!---meta author-->      
         <meta name="author" content="Irene Imbriani">
+        <!---meta phone-->
+        <meta name="telephone" content="11111111">
+        <!---meta- geo.placename-->
+        <meta name="geo.placename" content="Argentina">
         <!--------google fonts-------->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +34,7 @@
             crossorigin="anonymous">
         <!--------css------>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>inicio</title>
+        <title>Bienvenidos a  wuderlust</title>
         <!------favicon-->
         <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -89,7 +96,7 @@
                     <div class="col-12 col-md-8 flex-column align-items-center">
                         <div class="container-fluid texto-bienvenida">
                             <h1 class="bienvenido">
-                                Bienvenido
+                                Bienvenido 
                             </h1>
                             <h3 class="descubri fw-bold">
                                 Descubrí Argentina
