--- a/html/contacto.html
+++ b/html/contacto.html
@@ -83,7 +83,7 @@
         <section>
             <div class="container mt-5 pt-5">
                 <div class="row">
-                    <h1 class="text-center">Contactanos!</h1>  
+                    <h1 class="text-center">Contactanos</h1>  
                     <div class="row">
                         <div class="col-8 mx-auto col-lg-4">
                             <div class="card">
@@ -135,8 +135,8 @@
 
         <section class="contactanos">                    
                 <div class="container form-contacto">                   
-                     <div class="col-12 justify-content-center">
-                        <p class="fs-3 text-secondary fw-bold">
+                     <div class="col-12">
+                        <p class="fs-2 text-secondary fw-bold mb-0">
                             Dejanos tus datos y nos comunicaremos a la brevedad</p> 
                     <div class="contact-form-area">
                         <div class="contact-form">
