--- a/html/destinos.html
+++ b/html/destinos.html
@@ -219,9 +219,7 @@
                                     alt="paisajes argentina">
                                 <div class="card-img-overlay">
                                     <div class="card-body">
-                                        <p class="card-text text-white">Some
-                                            quick example text to build card's
-                                            content.</p>
+                                        <p class="card-text text-white">Patagonia</p>
                                     </div>
                                 </div>
                             </div>
@@ -251,9 +249,7 @@
                                     alt="paisajes argentina">
                                 <div class="card-img-overlay">
                                     <div class="card-body">
-                                        <p class="card-text text-white">Some
-                                            quick example text to build card's
-                                            content.</p>
+                                        <p class="card-text text-white">Mendoza</p>
                                     </div>
                                 </div>
                             </div>
@@ -265,9 +261,7 @@
                                     alt="paisajes argentina">
                                 <div class="card-img-overlay">
                                     <div class="card-body">
-                                        <p class="card-text text-white">Some
-                                            quick example text to build card's
-                                            content.</p>
+                                        <p class="card-text text-white">Purmamarca</p>
                                     </div>
                                 </div>
                             </div>
@@ -279,9 +273,7 @@
                                     alt="paisajes argentina">
                                 <div class="card-img-overlay">
                                     <div class="card-body">
-                                        <p class="card-text text-white">Some
-                                            quick example text to build card's
-                                            content.</p>
+                                        <p class="card-text text-white">Circuito Grande</p>
                                     </div>
                                 </div>
                             </div>
@@ -331,9 +323,8 @@
                                 src="../assets/alojamientos/hotel_quijote/quijote09.jpg"
                                 class="d-block w-100" alt="imagen_hotel">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for
-                                    the first slide.</p>
+                                <h5>Hotel Quijote</h5>
+                                <p>fotos de nuestros viajeros</p>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -341,9 +332,8 @@
                                 src="../assets/alojamientos/hotel_quijote/quijote06.jpg"
                                 class="d-block w-100" alt="imagen_hotel">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for
-                                    the second slide.</p>
+                                <h5>Hotel Quijote</h5>
+                                <p>fotos de nuestros viajeros</p>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -351,9 +341,8 @@
                                 src="../assets/alojamientos/hotel_quijote/quijote07.jpg"
                                 class="d-block w-100" alt="imagen_hotel">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for
-                                    the third slide.</p>
+                                <h5>Hotel Quijote</h5>
+                                <p>fotos de nuestros viajeros</p>
                             </div>
                         </div>
                     </div>
